# opa-demo

./: .gitignore  .manifest  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  Makefile  config.yaml  docker-compose.yml  input.json
client/: README.md  pyproject.toml  trino_client.py
cloudbeaver/workspace/.metadata/: dbeaver-instance.properties
data/: permissions.json  users.json
opa/: Makefile  docker-compose.yml
opa/data/: env.json  permissions.json  users.json
opa/data/common/: users.json
opa/data/env/prod/: permissions.json
opa/data/env/stage/: permissions.json
opa/policies/: README.md  allow.rego  user_roles.rego
opa/policies/authz/trino/: README.md
opa/policies/authz/trino/entrypoints/: allow.rego
opa/policies/authz/trino/modules/: operations.rego  user_roles.rego
opa/tests/: allow_test.rego  simple_test.rego  test_department_permissions.rego  test_user_permissions.rego  user_roles_test.rego
opa/tests/unit/authz/trino/: allow_test.rego  operations_test.rego  user_roles_test.rego
policy/: authz.rego
trino/: node.properties
trino/etc/: access-control.properties  access-control.properties.disabled  config.properties  password.db
